apunteppt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  - name: diplomadousach
    creationTimestamp: null  
spec: {}
status: {}
